--- a/src/App.css
+++ b/src/App.css
@@ -45,18 +45,9 @@ p {
 }
 
 h1,
-h2 {
-  text-transform: uppercase;
-}
-
 h2,
 h3 {
-  font-size: 20px;
-}
-
-h1 {
-  font-family: 'Rubik', sans-serif;
-  font-size: 32px;
+  text-transform: uppercase;
 }
 
 p {
@@ -89,6 +80,28 @@ p {
 
   .sectionTitle {
     margin-bottom: 60px;
+  }
+
+  button {
+    background-color: var(--btn-color);
+    color: var(--btn-text-color);
+    border: none;
+    border-radius: 20px;
+    width: 126px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
+  }
+
+  button:hover {
+    transform: scale(1.05);
+  }
+
+  button:active {
+    transform: translateY(2px);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
   }
 
   @media (width >= 1400px) {
