--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body, h1, h2, h3, p {
-    @apply font-sans; 
+    @apply font-sans font-semibold; 
   }
   h1 {
     @apply text-5xl;
