--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,13 @@
     @apply font-sans font-semibold; 
   }
   h1 {
-    @apply text-5xl;
+    @apply text-3xl md:text-5xl;
   }
   h2 {
-    @apply text-2xl;
+    @apply text-xl md:text-2xl;
   }
   h3 {
-    @apply text-3xl;
+    @apply text-2xl md:text-3xl;
   }
   p {
     @apply font-sans;
@@ -35,7 +35,7 @@
   }
   .img-frame::before {
     @apply absolute top-4 left-4;
-    @apply border-2 border-white;
+    @apply border-4 border-white;
     @apply rounded-tl-lg rounded-br-lg;
     @apply w-full h-full;
     @apply pointer-events-none;
