add light and dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #ffffff; 
+  color: #000000;
+}
+
+body.dark {
+  background-color: #212121; 
+  color: #ffffff; 
+}
+
 @layer base {
   body, h1, h2, h3 {
     @apply font-sans font-semibold; 
@@ -35,7 +45,7 @@
   }
   .img-frame::before {
     @apply absolute top-4 left-4;
-    @apply border-4 border-white;
+    @apply border-4 dark:border-white border-blue;
     @apply rounded-tl-lg rounded-br-lg;
     @apply w-full h-full;
     @apply pointer-events-none;
@@ -44,5 +54,8 @@
   }
   section {
     @apply xs:h-screen flex justify-center items-center;
+  }
+  .modeToggle {
+    @apply bg-transparent shadow-none p-0;
   }
 }
